--- a/veebileht/avaleht.html
+++ b/veebileht/avaleht.html
@@ -33,7 +33,7 @@
 		<div class="second-column-div">
 				<h1>RESTORAN MEKI</h1>
 				<div class="button-div">
-						<a href="menu.html" class="btn menu">MENÜÜ</a>
+						<a href="MENÜÜ.html" class="btn menu">MENÜÜ</a>
 						<a href="people.html" class="btn people">MEIE INIMESED</a>
 						<a href="kontakt.html" class="btn contact">KONTAKT</a>
 				</div>
