menüü ja kontakt valmis

--- a/veebileht/Menüü.html
+++ b/veebileht/Menüü.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MENÜÜ</title>
-	<link rel="stylesheet" href="style2.css">
+	<title>menüü</title>
+	<link rel="stylesheet" href="menüü_style.css">
 </head>
 <body>
     <div class="main-div">
@@ -12,7 +12,7 @@
                 <h3>EELROAD</h3>
                 <p>ceasari salat</p>
                 <p>4€</p>
-                <p>bruchettad mozarella ja tomatiga</p>
+                <p>bruschettad mozarella ja tomatiga</p>
                 <p>2,5€</p>
                 <p>tomatisupp</p>
                 <p>3€</p>
@@ -40,6 +40,28 @@
         <div class="split left">
             <div class="button-div">
                 <a href="avaleht.html" class="btn avaleht">Tagasi avalehele</a>
+            </div>
+        </div>
+        <div class="split images">
+            <div class="pilt_1">
+                <img 
+                    src="./pildid/bruschetta.jpg"
+                >
+            <div class="pilt_3">
+                    <img
+                        src="./pildid/pasta.jpg"
+                    >
+            <div class="pilt_2">
+                <img
+                    src="./pildid/pizza.jpg"
+                >
+            <div class="pilt_4">
+                <img
+                    src="./pildid/cremebrulee.jpg"
+                >
+            </div>
+            </div>
+            </div>
             </div>
         </div>
     </div>
