--- a/veebileht/avaleht.html
+++ b/veebileht/avaleht.html
@@ -4,60 +4,60 @@
 	<title>MEKI</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
-	<script async defer
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjo257SrC-z4fqwK4WHUWzTYsOo_6M8Q&callback=initMap">
-	</script>
 </head>
 <body>
 	<div class="main-div">
 		<div>
 			<div class="slider">
-		        <span id="slider-image-1"></span>
-		        <span id="slider-image-2"></span>
-                <span id="slider-image-3"></span>
-                <span id="slider-image-4"></span>
-		        <div class="image-holder">
-		            <img src="./pildid/kauss.jpg" class="slider-image" alt="söök"/>
-		            <img src="./pildid/truffe.jpg" class="slider-image" alt="söök"/>
-                    <img src="./pildid/meatmarket.jpeg" class="slider-image" alt="söök"/>
-                    <img src="./pildid/kolm_tilli.jpg" class="slider-image" alt="söök"/>
-		        </div>
-		        <div class="button-holder">
-		            <a href="#slider-image-1" class="slider-change"></a>
-		            <a href="#slider-image-2" class="slider-change"></a>
-                    <a href="#slider-image-3" class="slider-change"></a>
-                    <a href="#slider-image-4" class="slider-change"></a>
-		        </div>
-		    </div>
+				<span id="slider-image-1"></span>
+				<span id="slider-image-2"></span>
+				<span id="slider-image-3"></span>
+				<span id="slider-image-4"></span>
+				<div class="image-holder">
+					<img src="./pildid/kauss.jpg" class="slider-image" alt="söök"/>
+					<img src="./pildid/truffe.jpg" class="slider-image" alt="söök"/>
+					<img src="./pildid/meatmarket.jpeg" class="slider-image" alt="söök"/>
+					<img src="./pildid/kolm_tilli.jpg" class="slider-image" alt="söök"/>
+				</div>
+				<div class="button-holder">
+					<a href="#slider-image-1" class="slider-change"></a>
+					<a href="#slider-image-2" class="slider-change"></a>
+					<a href="#slider-image-3" class="slider-change"></a>
+					<a href="#slider-image-4" class="slider-change"></a>
+				</div>
+			</div>
 		</div>
 		<div class="second-column-div">
 				<h1>RESTORAN MEKI</h1>
 				<div class="button-div">
-						<a href="MENÜÜ.html" class="btn menu">MENÜÜ</a>
+						<a href="Menüü.html" class="btn menu">MENÜÜ</a>
 						<a href="people.html" class="btn people">MEIE INIMESED</a>
-						<a href="kontakt.html" class="btn contact">KONTAKT</a>
+						<a href="contact.html" class="btn contact">KONTAKT</a>
 				</div>
 					<div class="social-media-buttons-div">
+							<a href="https://www.instagram.com/kauss_poke/">
 							<img
 								class=social-media-img
 								src="./pildid/instagram.png"
 								alt="instagrami logo"
 							>
+							</a>
+							<a href="https://www.facebook.com/KAUSSpoke/">
 							<img
 								class=social-media-img
 								src="./pildid/facebook.png"
 								alt="facebooki logo"
 							>
+							</a>
 							<a href="https://www.tumblr.com/search/beauty%20and%20hair%20salon">
 								<img
 									class=social-media-img
 									src="./pildid/tumblr.png"
 									alt="tumblri logo"
-								>
+									>
 							</a>
-						</div>
-
-			</div>
+					</div>
+				</div>
 		</div>
 	</div>
 </body>
