--- a/veebileht/avaleht.html
+++ b/veebileht/avaleht.html
@@ -32,7 +32,7 @@
 				<div class="button-div">
 						<a href="Menüü.html" class="btn menu">MENÜÜ</a>
 						<a href="people.html" class="btn people">MEIE INIMESED</a>
-						<a href="contact.html" class="btn contact">KONTAKT</a>
+						<a href="kontakt.html" class="btn contact">KONTAKT</a>
 				</div>
 					<div class="social-media-buttons-div">
 							<a href="https://www.instagram.com/kauss_poke/">
