--- a/veebileht/avaleht.html
+++ b/veebileht/avaleht.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
 <head>
 	<title>MEKI</title>
 	<link rel="stylesheet" href="style.css">
@@ -30,7 +31,7 @@
 		<div class="second-column-div">
 				<h1>RESTORAN MEKI</h1>
 				<div class="button-div">
-						<a href="Menüü.html" class="btn menu">MENÜÜ</a>
+						<a href="Menuu.html" class="btn menu">MENÜÜ</a>
 						<a href="people.html" class="btn people">MEIE INIMESED</a>
 						<a href="kontakt.html" class="btn contact">KONTAKT</a>
 				</div>
