--- a/veebileht/people.html
+++ b/veebileht/people.html
@@ -1,7 +1,7 @@
 
 ​<!DOCTYPE html>
 <html>
-
+<meta charset="UTF-8">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
