--- a/veebileht/kontakt.html
+++ b/veebileht/kontakt.html
@@ -17,7 +17,7 @@
         <div class="second-column-div">
                 <h1>RESTORAN MEKI</h1>
                 <div class="button-div">
-                        <a href="menüü.html" class="btn menu">MENÜÜ</a>
+                        <a href="Menuu.html" class="btn menu">MENÜÜ</a>
                         <a href="people.html" class="btn people">MEIE INIMESED</a>
                         <a href="avaleht.html" class="btn contact">AVALEHT</a>
                 </div>
